--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
-  <title>Frontend Mentor | Clipboard landing page</title>
+  <title>Clipboard landing page</title>
 </head>
 
 <body>
@@ -36,6 +36,7 @@
     </p>
     <div class="columns__container">
       <img src="./images/image-computer-desktop.png" alt="image_computer" class="computer__image">
+      <img src="./images/image-computer-d.png" alt="computer_image" class="computer__image__mobile">
       <div class="column__description">
         <div class="column__text">
           <h3> Quick Search</h3>
@@ -132,10 +133,13 @@
       </div>
     </div>
     <div class="social">
-      <a href="https://www.facebook.com/"><img src="./images/icon-facebook.svg" alt="Facebook"></a>
-      <a href="https://twitter.com/"><img src="./images/icon-twitter.svg" alt="Twitter"></a>
-      <a href="https://instagram.com"><img src="./images/icon-instagram.svg" alt="Instagram"></a>
+      <a href="https://www.facebook.com/"><ion-icon name="logo-facebook"></ion-icon></a>
+      <a href="https://twitter.com/"><ion-icon name="logo-twitter"></ion-icon></a>
+      <a href="https://instagram.com"><ion-icon name="logo-instagram"></ion-icon></a>
     </div>
   </footer>
+
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
